--- a/docs/article/10-字符串.md
+++ b/docs/article/10-字符串.md
@@ -291,12 +291,12 @@
 
 - startswith
   - 作用：检查字符串是否是以某个子串开头, 是则返回 True，否则返回 False
-  - 语法：字符串序列.startswith(子串, 开始位置下标, 结束位置下标)
+  - 语法：字符串序列.startswith(子串)
 
 
 - endswith
   - 作用：检查字符串是否是以某个子串结尾, 是则返回 True，否则返回 False
-  - 语法：字符串序列.endswith(子串, 开始位置下标, 结束位置下标)
+  - 语法：字符串序列.endswith(子串)
 
 
 - isalpha
