--- a/docs/article/7-运算符.md
+++ b/docs/article/7-运算符.md
@@ -140,9 +140,22 @@ print(a >= b)  # True
     print(b or c)  # 1
     ```
 
+## 7.6 三目运算符
 
+- 语法：条件成立执行的表达式 if 条件 else 条件不成立执行的表达式
+    ```python
+    a = 1
+    b = 2
 
+    c = a if a > b else b
+    print(c) # 2
 
+    # 需求： 有两个变量，比较大小 如果变量1 大于 变量2 执行 变量 1 - 变量2； 否则 变量2 - 变量1
+    aa = 10
+    bb = 6
+    cc = aa - bb if aa > bb else bb - aa
+    print(cc) # 4
+    ```
 
 
 
